--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,44 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+@media screen and (max-width: 1140px) {
+    .container {
+        width: 100%;
+    }
+
+
+}
+
+@media screen and (max-width: 480px) {
+    .row {
+        flex-wrap: wrap;
+    }
+    .lessons .col {
+    width: 100%;
+    }
+    .steps .col {
+    width: 100%;
+    padding-bottom: 2em;
+    }
+    .why-us .col-right {
+    width: 100%;
+    }
+    .why-us .col-left {
+    width: 100%;
+    }
+    .why-us {
+        background-color: black;
+        margin: 0;
+        padding: 3rem 0;
+    }
+    .steps {
+        margin: 0;
+    }
+    .card{
+        padding: 3rem 0;
+    }
+}
+
+
